--- a/src/Pages/dashboard/style.css
+++ b/src/Pages/dashboard/style.css
@@ -1,100 +1,4 @@
-.list-task {
-    width:902px;
-    height:140px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    margin-top: 18px;
-}
-.db-subtext{
-    font-size:18px;
-    font-weight: 600;
-    line-height: 21.78px;
-    color:#161515;
-    margin-left:32px;
-    display: inline-block;
-}
-.jobtask_01 {
-    text-align: center;
-    margin:24px 18px 0  36px;
-}
-.listnum {
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#E95324;
-    margin-bottom: 10px;
-}
-.jobtask {
-    display: flex;
-    cursor: pointer;
-}
-.activity {
-    width:902px;
-    height:390px;
-    margin-left: 18px;
-    margin-top: 18px;
-}
-.ac-chart {
-    width:673px;
-    height:390px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-}
-
-.adchart {
-    display: flex;
-}
-.cc-chart {
-    width:213px;
-    height:185px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    margin-left: 18px;
-    margin-bottom: 18px;
-}
-.cc-chart img {
-    width:213px;
-    height:185px;
-}
-.revenue {
-    width:902px;
-    height:390px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    margin-top: 18px;
-}
-.bsproducts {
-    width:902px;
-    height:755px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    margin-top: 18px;
-}
-.form-control {
-    height: 35px;
-    background-color: #ffffff;
-    border-radius: 5px;
-    margin-left: 600px;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
-    margin-top: 12px;
-    padding: auto 5px;
-    border: 1px solid #b9b9b9;
-    margin: 0 auto;
-}
-.form-group {
-    border: 1px solid #ffffff;
-    margin: 0 auto;
-    cursor: pointer;
-}
-.choose-select {
-    display: flex;
+.dashboard-pages {
+    height: 1862px;
+    width: 920px;
 }
