--- a/src/Components/pl_orders/style.css
+++ b/src/Components/pl_orders/style.css
@@ -7,13 +7,14 @@
     border-radius: 15px;
     margin-top: 18px;
 }
-.pl_form .pl_list p {
+.pl_form .pl_list .order_pllist a {
     font-size:14px;
     font-weight: 500;
     line-height: 16.94px;
     color:#161515;
     margin:16px 32px 0 32px;
     cursor: pointer;
+    text-decoration: none;
 }
 .pl_form .order_pllist {
     display: flex;
@@ -27,7 +28,7 @@
     width:120px;
     height: 40px;
     background-color: #ffffff;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
     font-size: 14px;
     font-weight: 500;
@@ -68,7 +69,6 @@
     height:40px;
     margin-left: 227px;
     margin-top: 0px;
-    cursor: pointer;
 }
 .pl_form .pl_button p{
     font-weight: 600;
@@ -78,4 +78,5 @@
     height:50px;
     margin: 10px 38px;
     width: 138px;
+    cursor: pointer;
 }
