--- a/src/Pages/bloglist/style.css
+++ b/src/Pages/bloglist/style.css
@@ -1,6 +1,6 @@
 .Blogs-page {
     width:902px;
-    height:653px;
+    height:585px;
     margin-left: 18px;
     background-color: #ffffff;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -50,4 +50,7 @@
     height:76px;
     width: 902px;
     background: #FFFFFF;
+}
+.blog_form .widgetLgTable .widgetLgName, .blog_form .widgetLgTable .widgetLgCate {
+    font-size:14px;
 }
