--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
-    display:flex;
+  display: flex;
+  justify-content: center;
 }
