--- a/src/Components/bsproducts/style.css
+++ b/src/Components/bsproducts/style.css
@@ -1,49 +1,49 @@
 .bsproducts {
-    width:902px;
-    height:745px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    margin-top: 18px;
+  width: 902px;
+  height: 745px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  margin-top: 18px;
+  margin-left: 20px;
 }
 .widgetLg {
-    flex: 2;
-    padding: 0px 0 0 20px;
-  }
-  .widgetLgTable{
-    width: 100%;
-    border-spacing: 20px;
-  }
-  .widgetLgTh{
-    text-align: left;
-  }
-  
-  .widgetLgImage{
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-  }
-  
-  .widgetLgImg {
-    width: 111px;
-    height: 100px;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-  
-  .widgetLgName,.widgetLgAmount{
-    font-weight: 300;
-  }
-  
-  .widgetLgRev {
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#E95324;
-  }
-  .widgetLgStock {
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#161515;
-  }
-  
+  flex: 2;
+  padding: 0px 0 0 20px;
+}
+.widgetLgTable {
+  width: 100%;
+  border-spacing: 20px;
+}
+.widgetLgTh {
+  text-align: left;
+}
+
+.widgetLgImage {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+}
+
+.widgetLgImg {
+  width: 111px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.widgetLgName,
+.widgetLgAmount {
+  font-weight: 300;
+}
+
+.widgetLgRev {
+  font-weight: 500;
+  line-height: 16.94px;
+  color: #e95324;
+}
+.widgetLgStock {
+  font-weight: 500;
+  line-height: 16.94px;
+  color: #161515;
+}
