--- a/src/Components/listtask/style.css
+++ b/src/Components/listtask/style.css
@@ -1,32 +1,32 @@
 .list-task {
-    width:902px;
-    height:140px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-    margin-top: 18px;
+  width: 902px;
+  height: 140px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  margin-top: 18px;
+  margin-left: 20px;
 }
-.db-subtext{
-    font-size:18px;
-    font-weight: 600;
-    line-height: 21.78px;
-    color:#161515;
-    margin-left:32px;
-    display: inline-block;
+.db-subtext {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21.78px;
+  color: #161515;
+  margin-left: 32px;
+  display: inline-block;
 }
 .jobtask_01 {
-    text-align: center;
-    margin:24px 18px 0  36px;
-    text-decoration: none;
+  text-align: center;
+  margin: 24px 18px 0 36px;
+  text-decoration: none;
 }
 .listnum {
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#E95324;
-    margin-bottom: 10px;
+  font-weight: 500;
+  line-height: 16.94px;
+  color: #e95324;
+  margin-bottom: 10px;
 }
 .jobtask {
-    display: flex;
-    cursor: pointer;
+  display: flex;
+  cursor: pointer;
 }
