--- a/src/Pages/rateList/style.css
+++ b/src/Pages/rateList/style.css
@@ -1,99 +1,103 @@
 .Rates-page {
-    width:902px;
-    height:853px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-    margin-top: 18px;
+  width: 902px;
+  height: 853px;
+  margin-left: 18px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  margin-top: 18px;
 }
 .Rates-page .rates-thing {
-    display: flex;
-    margin-block-end: 16px;
+  display: flex;
+  margin-block-end: 16px;
 }
 .Rates-page .wrap {
-    width: 100px;
-    height: 40px;
-    background: #FFFFFF;
-    margin:18px 0 0 32px;
-    border: 1px solid #E1E1E1;
-    position: relative;
-    cursor: pointer;
+  width: 100px;
+  height: 40px;
+  background: #ffffff;
+  margin: 18px 0 0 32px;
+  border: 1px solid #e1e1e1;
+  position: relative;
+  cursor: pointer;
 }
-.Rates-page .db-text02{
-    font-size:14px;
-    font-weight: 600;
-    line-height: 16.94px;
-    color:#E95324;
-    margin-left:32px;
-    position: absolute;
-    margin:20px 0 0 48px;
-    transform: translate(-50%, -50%);
+.Rates-page .db-text02 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16.94px;
+  color: #e95324;
+  margin-left: 32px;
+  position: absolute;
+  margin: 20px 0 0 48px;
+  transform: translate(-50%, -50%);
 }
 .Rates-page .wrap1 {
-    width: 100px;
-    height: 40px;
-    background: #FFFFFF;
-    margin:18px 0 0 0;
-    border: 1px solid #E1E1E1;
-    position: relative;
-    cursor: pointer;
+  width: 100px;
+  height: 40px;
+  background: #ffffff;
+  margin: 18px 0 0 0;
+  border: 1px solid #e1e1e1;
+  position: relative;
+  cursor: pointer;
 }
-.Rates-page .db-text03{
-    font-size:14px;
-    font-weight: 400;
-    line-height: 16.94px;
-    color:#161515;
-    margin-left:32px;
-    position: absolute;
-    margin:20px 0 0 48px;
-    transform: translate(-50%, -50%);
+.Rates-page .db-text03 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.94px;
+  color: #161515;
+  margin-left: 32px;
+  position: absolute;
+  margin: 20px 0 0 48px;
+  transform: translate(-50%, -50%);
 }
 .rate-form .widgetLg {
-    flex: 3;
-    padding: 0px 0 0 20px;
+  flex: 3;
+  padding: 0px 0 0 20px;
 }
-.rate-form .widgetLgTable{
-    width: 100%;
-    border-spacing: 20px;
+.rate-form .widgetLgTable {
+  width: 100%;
+  border-spacing: 20px;
 }
-.rate-form .widgetLgTh{
-    text-align: left;
-    font-size:14px;
-    font-weight: 600;
-    line-height: 16.94px;
-    color:#161515;
+.rate-form .widgetLgTh {
+  text-align: left;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16.94px;
+  color: #161515;
 }
-.widgetLgRate{
-    font-size:14px;
-    font-weight: 400;
-    line-height: 16.94px;
-    color:#161515;
+.widgetLgRate {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.94px;
+  color: #161515;
 }
 .widgetLgimg {
-    width: 111px;
-    height: 99.9px;
-    object-fit: cover;
-    margin-right: 10px;
-    cursor: pointer;
+  width: 111px;
+  height: 99.9px;
+  object-fit: cover;
+  margin-right: 10px;
+  cursor: pointer;
 }
 .rate1 {
-    display: flex;
+  display: flex;
 }
 .rate1 span {
-    margin:12px 0 0 28px;
+  margin: 12px 0 0 28px;
 }
 .rate1_2 {
-    display: flex;
+  display: flex;
 }
 .rate1_1 img {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 .rate1_2 img {
-    margin-right:12px;
+  margin-right: 12px;
 }
 .widgetLgTr {
-    width: 831px;
-    background: #FFFFFF;
-    border: 1px solid #E1E1E1;
+  width: 831px;
+  background: #ffffff;
+  border: 1px solid #e1e1e1;
+}
+.Rates-page .css-wjh20t-MuiPagination-ul {
+  margin-top: 20px;
+  justify-content: center;
 }
