--- a/src/Components/hh_products/style.css
+++ b/src/Components/hh_products/style.css
@@ -1,66 +1,72 @@
 .Hh-pages {
-    width:902px;
-    height:953px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    margin-top: 18px;
+  width: 902px;
+  height: 953px;
+  margin-left: 18px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  margin-top: 18px;
 }
-.Hh-pages .db-text02{
-    font-size:18px;
-    font-weight: 600;
-    line-height: 21.78px;
-    color:#E95324;
-    margin-left:32px;
-    display: inline-block;
+.Hh-pages .db-text02 {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21.78px;
+  color: #e95324;
+  margin-left: 32px;
+  display: inline-block;
 }
-.Hh-pages .db-text03{
-    font-size:18px;
-    font-weight: 600;
-    line-height: 21.78px;
-    color:#161515;
-    margin-left:32px;
-    display: inline-block;
+.Hh-pages .db-text03 {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21.78px;
+  color: #161515;
+  margin-left: 32px;
+  display: inline-block;
 }
 .Hh-pages .Hh-form {
-    width: 902px;
-    background: #FFFFFF;
-    margin:18px 0 0 0px;
-    border-bottom: 1px solid #E1E1E1;
-    position: relative;
-    cursor: pointer;
+  width: 902px;
+  background: #ffffff;
+  margin: 18px 0 0 0px;
+  border-bottom: 1px solid #e1e1e1;
+  position: relative;
+  cursor: pointer;
 }
 .Hh-pages .hh_sth {
-    height:76px;
-    width: 902px;
-    background: #FFFFFF;
-    border-bottom: 1px solid #E1E1E1;
+  height: 76px;
+  width: 902px;
+  background: #ffffff;
+  border-bottom: 1px solid #e1e1e1;
 }
-.Hh-pages .db-text04{
-    font-size:18px;
-    font-weight: 600;
-    line-height: 21.78px;
-    color:#E95324;
-    margin-left:32px;
-    padding-top:12px;
-    display: inline-block;
+.Hh-pages .db-text04 {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21.78px;
+  color: #e95324;
+  margin-left: 32px;
+  padding-top: 12px;
+  display: inline-block;
 }
-.hhp-form .widgetLgRate, .hhp-form .widgetLgCate, .hhp-form .widgetLgRevi{
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#161515;
-    font-size: 14px;
+.hhp-form .widgetLgRate,
+.hhp-form .widgetLgCate,
+.hhp-form .widgetLgRevi {
+  font-weight: 500;
+  line-height: 16.94px;
+  color: #161515;
+  font-size: 14px;
 }
-.hhp-form .widgetLgPrice,.hhp-form .widgetLgStock {
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#E95324;
-    font-size: 14px;
+.hhp-form .widgetLgPrice,
+.hhp-form .widgetLgStock {
+  font-weight: 500;
+  line-height: 16.94px;
+  color: #e95324;
+  font-size: 14px;
 }
 .hhp-form .widgetLgTr {
-    width: 902px;
-    background: #FFFFFF;
-    margin:18px 0 0 0px;
-    border-bottom: 1px solid #E1E1E1;
+  width: 902px;
+  background: #ffffff;
+  margin: 18px 0 0 0px;
+  border-bottom: 1px solid #e1e1e1;
+}
+.HH-pages .css-wjh20t-MuiPagination-ul {
+  justify-content: center;
 }
