--- a/src/Components/sidebar/style.css
+++ b/src/Components/sidebar/style.css
@@ -1,5 +1,4 @@
 .sidebar {
-  /* width: 300px; */
   height: 100%;
   display: flex;
   align-items: center;
@@ -13,6 +12,7 @@
   background-color: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   justify-content: space-between;
+  margin-right: 2px;
 }
 .bar_01 {
   width: 198px;
@@ -97,4 +97,8 @@
   margin-left: 22px;
   position: absolute;
   cursor: pointer;
+}
+.side-form a.active .bar-text {
+  font-weight: 700;
+  color: #e95324;
 }
