--- a/src/Components/w_confirm/style.css
+++ b/src/Components/w_confirm/style.css
@@ -7,7 +7,7 @@
     border-radius: 15px;
     margin-top: 18px;
 }
-.wc_form .db-text04{
+.wc_form .db-text04 {
     font-size:18px;
     font-weight: 600;
     line-height: 21.78px;
@@ -19,16 +19,19 @@
 .wc_form .widgetLgSP {
     display: flex;
     margin-bottom: 12px;
+    align-items: center;
 }
 .wc_form .widgetLgSP h3 {
     font-size:14px;
     font-weight: 600;
     line-height: 16.94px;
     color:#161515;
+    margin-bottom: 5px;
 }
 .wc_form .widgetLgSP p {
     font-size:12px;
     font-weight: 400;
     line-height: 14.52px;
     color:#161515;
+    margin-bottom: 5px;
 }
