--- a/src/Components/ch_products/style.css
+++ b/src/Components/ch_products/style.css
@@ -1,19 +1,20 @@
 .Ch-pages {
   width: 902px;
-  height: 953px;
   margin-left: 18px;
   background-color: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   margin-top: 18px;
+  margin-bottom: 24px;
 }
 .Ch-pages .db-text02 {
   font-size: 18px;
   font-weight: 600;
   line-height: 21.78px;
   color: #e95324;
-  margin-left: 32px;
+  margin-left: 26px;
   display: inline-block;
+  padding: 16px;
 }
 .Ch-pages .db-text03 {
   font-size: 18px;
@@ -69,7 +70,8 @@
   font-weight: 600;
   line-height: 21.78px;
   color: #e95324;
-  margin-left: 32px;
+  margin-top: 16px;
+  margin-left: 40px;
   padding-top: 12px;
   display: inline-block;
 }
@@ -90,4 +92,7 @@
 }
 .Ch-pages .css-wjh20t-MuiPagination-ul {
   justify-content: center;
+}
+.Ch-pages .rates_num{
+  padding: 12px 10px;
 }
