--- a/src/Components/p_sales/style.css
+++ b/src/Components/p_sales/style.css
@@ -1,6 +1,6 @@
 .p_sale {
     width:902px;
-    height:520px;
+    height:506px;
     margin-left: 18px;
     background-color: #ffffff;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -11,9 +11,9 @@
     font-size:18px;
     font-weight: 600;
     line-height: 21.78px;
-    color:#E95324;
+    color:#161515;
     margin-left:32px;
-    padding-top:12px;
+    padding-top:18px;
     display: inline-block;
 }
 .p_sale .bl_title input {
@@ -42,7 +42,7 @@
     font-weight: 500;
     line-height: 16.94px;
     color:#161515;
-    margin-left:32px;
+    margin-left:36px;
     margin-right: 16px;
     width: 100px;
 }
@@ -51,7 +51,7 @@
     font-weight: 500;
     line-height: 16.94px;
     color:#161515;
-    margin-left:32px;
+    margin-left:36px;
     margin-right: 16px;
 }
 .p_sale .bl_title2 p {
@@ -59,12 +59,14 @@
     font-weight: 500;
     line-height: 16.94px;
     color:#161515;
-    margin-left:32px;
+    margin-left:36px;
     margin-right: 16px;
 }
 .p_sale .bl_title, .p_sale .bl_title1, .p_sale .bl_title2 {
     display: flex;
     margin-bottom: 24px;
+    margin-top: 24px;
+
 }
 .p_sale .edit_button {
     border: none;
