--- a/src/Components/w_confirm/style.css
+++ b/src/Components/w_confirm/style.css
@@ -1,37 +1,40 @@
 .wc_form {
-    width:902px;
-    height:962px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    margin-top: 18px;
+  width: 902px;
+  height: 962px;
+  margin-left: 18px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  margin-top: 18px;
 }
 .wc_form .db-text04 {
-    font-size:18px;
-    font-weight: 600;
-    line-height: 21.78px;
-    color:#E95324;
-    margin-left:32px;
-    padding-top:12px;
-    display: inline-block;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21.78px;
+  color: #e95324;
+  margin-left: 32px;
+  padding-top: 12px;
+  display: inline-block;
 }
 .wc_form .widgetLgSP {
-    display: flex;
-    margin-bottom: 12px;
-    align-items: center;
+  display: flex;
+  margin-bottom: 12px;
+  align-items: center;
 }
 .wc_form .widgetLgSP h3 {
-    font-size:14px;
-    font-weight: 600;
-    line-height: 16.94px;
-    color:#161515;
-    margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16.94px;
+  color: #161515;
+  margin-bottom: 5px;
 }
 .wc_form .widgetLgSP p {
-    font-size:12px;
-    font-weight: 400;
-    line-height: 14.52px;
-    color:#161515;
-    margin-bottom: 5px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14.52px;
+  color: #161515;
+  margin-bottom: 5px;
+}
+.css-wjh20t-MuiPagination-ul {
+  justify-content: center;
 }
