--- a/src/Pages/bl_edit/style.css
+++ b/src/Pages/bl_edit/style.css
@@ -1,115 +1,118 @@
 .edit_form {
-    width:902px;
-    height:953px;
-    margin-left: 18px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-    margin-top: 18px;
+  width: 902px;
+  height: 953px;
+  margin-left: 18px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  margin-top: 18px;
 }
-.edit_form .db-text02{
-    font-size:18px;
-    font-weight: 600;
-    line-height: 21.78px;
-    color:#E95324;
-    margin-left:32px;
-    padding-top:12px;
-    display: inline-block;
+.edit_form .db-text02 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  margin-left: 32px;
+  padding-top: 12px;
+  display: inline-block;
+  margin-bottom: 20px;
 }
 .edit_form .bl_title {
-    display: flex;
-    margin-bottom: 24px;
+  display: flex;
+  margin-bottom: 24px;
+  margin-left: 15px;
 }
 .edit_form .bl_title p {
-    font-size:14px;
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#161515;
-    margin-left:32px;
-    margin-right: 64px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.94px;
+  color: #161515;
+  margin-left: 32px;
+  margin-right: 64px;
+  align-self: center;
 }
 .edit_form .bl_title textarea {
-    width: 559px;
-    height: 55px;
-    border: 1px solid #161515;
-    margin-top: 10px;
+  width: 566px;
+  height: 55px;
+  border: 1px solid #161515;
 }
 .edit_form .bl_title img {
-    width: 120px;
-    height: 120px;
-    margin-left:-08px;
-    margin-right:36px;
-    cursor: pointer;
+  width: 120px;
+  height: 120px;
+  margin-left: -08px;
+  margin-right: 36px;
+  cursor: pointer;
 }
 .edit_form .bl_title1 {
-    display: flex;
-    margin-bottom: 24px;
+  display: flex;
+  margin-bottom: 24px;
+  margin-left: 15px;
 }
 .edit_form .bl_title1 p {
-    font-size:14px;
-    font-weight: 500;
-    line-height: 16.94px;
-    color:#161515;
-    margin-left:32px;
-    margin-right: 64px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.94px;
+  color: #161515;
+  margin-left: 32px;
+  margin-right: 64px;
+  align-self: center;
 }
 .edit_form .bl_title1 textarea {
-    width: 559px;
-    height: 370px;
-    border: 1px solid #161515;
-    margin-top: 10px;
-    margin-left:-09px;
+  width: 566px;
+  height: 370px;
+  border: 1px solid #161515;
+  margin-left: -09px;
 }
 .edit_form .bl_title .form-control {
-    width:200px;
-    height: 55px;
-    background-color: #ffffff;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
-    border: 1px solid #161515;
-    margin-left:-16px;
-    margin-top:6px;
-    border-radius: 0px;
-    text-align: center;
+  width: 200px;
+  height: 55px;
+  background-color: #ffffff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  border: 1px solid #161515;
+  margin-left: -16px;
+  border-radius: 0px;
+  text-align: center;
+  margin-top: -2px;
 }
 .edit_form .edit_button {
-    border: none;
-    background: #ffffff;
-    border: 1px solid #E95324;
-    border-radius: 8px;
-    width: 260px;
-    height:60px;
-    margin-left: 200px;
-    margin-top: 20px;
+  border: none;
+  background: #ffffff;
+  border: 1px solid #e95324;
+  border-radius: 8px;
+  width: 260px;
+  height: 60px;
+  margin-left: 200px;
+  margin-top: 20px;
 }
-.edit_form .edit_button p{
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 29.05pxpx;
-    color: #E95324;
-    padding:0px 0 0 103px;
-    cursor: pointer;
-    margin-top:15px;
+.edit_form .edit_button p {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29.05pxpx;
+  color: #e95324;
+  padding: 0px 0 0 103px;
+  cursor: pointer;
+  margin-top: 15px;
 }
 .edit_form .bl_btn {
-    display: flex;
+  display: flex;
+  margin-left: 15px;
 }
 .edit_form .edit_button1 {
-    border: none;
-    background: #E95324;
-    border-radius: 8px;
-    width: 260px;
-    height:60px;
-    margin-left: 44px;
-    margin-top: 20px;
+  border: none;
+  background: #e95324;
+  border-radius: 8px;
+  width: 260px;
+  height: 60px;
+  margin-left: 48px;
+  margin-top: 20px;
 }
-.edit_form .edit_button1 p{
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 29.05pxpx;
-    color: #ffffff;
-    padding:0px 0 0 50px;
-    cursor: pointer;
-    margin-top:15px;
+.edit_form .edit_button1 p {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29.05pxpx;
+  color: #ffffff;
+  padding: 0px 0 0 50px;
+  cursor: pointer;
+  margin-top: 15px;
 }
