--- a/src/Components/hh_products/style.css
+++ b/src/Components/hh_products/style.css
@@ -1,6 +1,6 @@
 .Hh-pages {
   width: 902px;
-  height: 953px;
+  height: 833px;
   margin-left: 18px;
   background-color: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -12,8 +12,9 @@
   font-weight: 600;
   line-height: 21.78px;
   color: #e95324;
-  margin-left: 32px;
+  margin-left: 26px;
   display: inline-block;
+  padding: 16px;
 }
 .Hh-pages .db-text03 {
   font-size: 18px;
@@ -32,7 +33,7 @@
   cursor: pointer;
 }
 .Hh-pages .hh_sth {
-  height: 76px;
+  height:46px;
   width: 902px;
   background: #ffffff;
   border-bottom: 1px solid #e1e1e1;
