--- a/src/Pages/rf_detail/style.css
+++ b/src/Pages/rf_detail/style.css
@@ -37,8 +37,9 @@
 }
 .info_pay .widget2 h3 {
     color:#376CE0;
+    margin-top: 16px;
 }
 .info_pay .widget2 .stt_num3 {
-    margin-left:46px;
+    margin-left:52px;
     color:#376CE0;
 }
